Code quality updates